test/files/neg/bug3209.scala
@javax.annotation.Generated(Array("test"))
package test