test/files/neg/bug3209.check
bug3209.scala:2: error: expected start of definition
package test
^
one error found
